Added for Extension LibraryUsers with repository, controller and responses. With the functionality of borrowing a book and returning it. Also added openapi spec for this.  (Not quite tested will test tomorrow)
