# src/main/java/com/booleanuk/api/security/WebSecurityConfig.java
@@ -59,7 +59,7 @@ public class WebSecurityConfig {
                 .sessionManagement((session) -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests((requests) -> requests
                         .requestMatchers("/auth/**").permitAll()
-                        .requestMatchers("/games", "/games/**").authenticated()
+                        .requestMatchers("/games", "/games/**", "/libraryusers", "libraryuser/**").authenticated()
                 );
         http.authenticationProvider(authenticationProvider());
         http.addFilterBefore(authenticationJwtTokenFilter(), UsernamePasswordAuthenticationFilter.class);
